app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";

  $dark-purple: #59597b;
  $purple: #7e7ebf;
  $light-purple: #cfcfea;
  $light-gray: #b4b2ce4f;

header {
  border-bottom: 2px solid $light-purple;
}

body {
    font-family: monospace;
    background-color: $light-gray
}

.bg-light {
  background-color: #e4dfffa1 !important;
}

.border-between > [class*='col-']:before {
  background: $purple;
  bottom: 0;
  content: " ";
  left: 0;
  position: absolute;
  width: 2px;
  top: 0;
}

.border-between > [class*='col-']:first-child:before {
  display: none;
}

.bottom-margin {
  margin-bottom: 50px;
}

.bottom-margin-small {
  margin-bottom: 30px;
}

.btn-purple {
  background-color: $purple;
  border-style: solid;
  border-color: $light-purple;
  color: white;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  width: auto;
  height: auto;
}

.btn-purple:hover {
  border-color: $dark-purple;
  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
}

.float {
  float: left;
}

.float-right {
  float: right;
}

.glowing {
  text-shadow: 2px 2px 5px white;
}

.journal-content {
  height: 300px;
  width: 300px;
}

.label {
  font-size: 1.2em;
  color: $purple;
  margin-right: 10px;
}

.login {
  margin-top: 50px;
}

.navbar-light {
  color: $dark-purple;
}

.photo-display {
  border-style: solid;
  border-color: $purple;
  padding: 2px;
}

.photo-display:hover {
  border-color: $dark-purple;
  box-shadow: 7px 7px 10px $purple;
}

.photo-frame {
  border-style: solid;
  border-width: 2px;
  border-color: $light-purple;
  padding: 2px;
}

.photo-show {
  max-width: 1100px;
  max-height: 980px;
  margin: 0 auto;
}

.purple-link {
  color: $purple;
}

.purple-link:hover {
  color: $dark-purple;
  text-decoration: none;
  text-shadow: 2px 2px 5px $purple;
}

.right-margin {
  margin-right: 20px;
}

.show-journal-content {
  font-size: 1.2em;
}

.top-margin {
  margin-top: 30px;
}

.welcome-banner {
  padding: 80px;
  min-width: 800px;
  font-family: monospace;
  color: white;
  text-align: center;
  background-color: $purple;
  margin: 30px 100px;
  border-style: solid;
  border-color: black;
}

.welcome-text {
  min-width: 200px;
  padding: 20px;
  background-color: $dark-purple;
  margin: 0 auto;
  border-style: solid;
  border-radius: 2%;
    border-color: white;
}

.welcome-text h1 {
  margin-top: 16px;
  font-weight: bold;
  text-shadow: 1px 1px 40px;
}

.login, .sign-up{
  float: left;
  padding-left: 100px;
  padding-right: 100px;

.glowing {
  text-shadow: 2px 2px 5px white;
}

.btn-purple {
  background-color: $purple;
  border-style: solid;
  border-color: $light-purple;
  color: white;
}

.border-between > [class*='col-']:before {
  background: $purple;
  bottom: 0;
  content: " ";
  left: 0;
  position: absolute;
  width: 2px;
  top: 0;
}

.navbar-light .navbar-brand {
  color: $dark-purple
}

.search-form {

}

